--- a/ShopmeWebParent/ShopmeFrontEnd/pom.xml
+++ b/ShopmeWebParent/ShopmeFrontEnd/pom.xml
@@ -33,6 +33,11 @@
 			<artifactId>spring-boot-starter-oauth2-client</artifactId>
 		</dependency>
 
+        <dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+		</dependency>	
+
 	</dependencies>
 
 	<build>
